Обновления и удаления оценок
